--- a/config.json
+++ b/config.json
@@ -7,7 +7,18 @@
     "languages": {"ar": "عربي", "bg": "Български", "ca": "Català", "cs": "Čeština", "da": "Dansk", "de": "Deutsch","en": "English", "es": "Español", "es-mx": "Español - México", "eu": "Euskara", "fa": "فارسی", "fr" : "Français", "he" : "עברית", "hu": "magyar", "it": "Italiano", "ja": "日本語","nl": "Nederlands", "pl": "Polski", "pt-br": "Português - Brasil", "pt": "Português - Portugal", "ro": "Română", "ru": "Русский", "sv": "Svenska", "tr" : "Türkçe", "zh-cn" : "简体中文", "zh-tw" : "正體中文"},
     "wsservice" : "moodle_mobile_app",
     "wsextservice" : "local_mobile",
-    "siteurl":"http://learning.trinityhigh.com",
+    "presets" : {"url": "http://learning.trinityhigh.com", "username": ""},
+    "sync_ws_on" : true,
+    "sync_css_on" : true,
+    "sync_cron": 300000,
+    "sync_ws" : 300000,
+    "sync_css" : 3600000,
+    "log_length" : 100,
+    "dev_debug": false,
+    "extra_js": [],
+    "demo_sites": [],
+    "notifications_enabled": true,
     "gcmpn": "694767596569",
+    "reportbugmail": "r.massey@trinityhigh.com",
     "customurlscheme": "moodlemobile"
 }
